Search API Solr search 1.x, dev (xx/xx/xxxx):
---------------------------------------------
- #1776534 by drunken monkey, e2thex: Added support for using a Solr server
  with multiple sites.
- #2152337 by drunken monkey: Removed confusing "multiple text fields" section
  from README.txt.
- #2099559 by drunken monkey: Made optimizing the Solr server optional.
- #2146749 by drunken monkey: Added soft commits as the default for Solr 4.
- #1773440 by drunken monkey: Added performance improvement for “filter
  only” queries.
- #2147573 by drunken monkey: Improved error handling.

Search API Solr search 1.4 (12/25/2013):
----------------------------------------
- #2157839 by drunken monkey, Nick_vh: Updated config files to the newest
  version.
- #2130827 by drunken monkey: Added additional Solr server information to the
  Server overview.
- #2126281 by drunken monkey: Update error handling according to the latest
  Search API change.
- #2127991 by drunken monkey: Fixed handling of negated fulltext keys.
- #2113943 by drunken monkey: Fixed clash in specifying the HTTP method for
  searches.
- #2127193 by jlapp: Fixed date field values returned for multi-index searches.
- #2122155 drunken monkey: Added the "Files" tab to contextual links.
- #1846860 by andrewbelcher, drclaw, drunken monkey, danielnolde: Added a way
  to easily define new dynamic field types.
- #2064377 by Nick_vh: Made configuration files compatible with Solr Cloud.
- #2107417 by Nick_vh: Fixed config files for Solr 4.5.

Search API Solr search 1.3 (10/23/2013):
----------------------------------------
- #2099683 by drunken monkey: Added support for 'virtual fields' in Views.
- #1997702 by ianthomas_uk, drunken monkey: Added "AUTO" mode for HTTP method.
- #2033913 by drunken monkey: Fixed small error in schema.xml.
- #2073441 by drunken monkey: Removed custom uninstall code for deleting
  dependent servers.
- #1882190 by corvus_ch, arnested, drunken monkey: Added optional index ID
  prefixes.
